# task_cli

./: Cargo.toml
domain/src/: lib.rs
domain/src/entities/: task.rs
domain/src/value_objects/: data.rs  ids.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/handlers/: tasks.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/controllers/: tasks.rs
src/: app.rs  main.rs
src/cmd/: mod.rs  new.rs  root.rs  tasks.rs
usecases/: Cargo.toml
usecases/src/: lib.rs
usecases/src/interactors/tasks/: create.rs
usecases/src/ports/tasks/: create.rs
~/root/: Network Persistent State  QuotaManager  TransportSecurity  machineid  storage.json
~/root/Backups/: workspaces.json
~/root/Cache/: 0090ed00785a5466_0  026597b8f53fd33f_0  0e2057ef0cadaa53_0  1c65bcf6e2000e22_0  2a5f0a20c45e613d_0  2d5ddd439f2c3b69_0  32fbd8a3a4e1c93d_0  33b6b8e230e82e75_0  4d309f24e44da8b9_0  5a55a35ec003b3b1_0  5bd0a2c252eed107_0  625bbe30771f2f39_0  6e8cbb801e585db2_0  72a18c8a115c032e_0  879bdf8ac00b9ccd_0  91cb61892af80003_0  a12f8e526c24b6ec_0  a487402e0b5d30f6_0  a50505545da9019f_0  b4c20c72239f5dfe_0  b903076474fd01dd_0  c3693799c726d12b_0  c85687354a0e770a_0  caf56f58ca97fa74_0  cbc42e4c979f69f0_0  ccfdee63b2f62ae7_0  cdadd2f4335b8c4e_0  db419f63fe704944_0  e8c55ad7dae55b07_0  ec18c900e3df4bee_0  f485e1526eb7c65d_0  fa13e90581c6cb2b_0  faa7b67c408db7cf_0
~/root/Cache/index-dir/: the-real-index
~/root/CachedExtensions/: builtin  user
~/root/GPUCache/: data_1  index
~/root/Local Storage/leveldb/: LOG
~/root/Session Storage/: LOG
(+711 files in other folders)
