[package]
name = "taskmanager_rca_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "task_cli"
path = "src/main.rs"

[dependencies]
domain = {path = "./domain", version="0.1"}
usecases = {path="./usecases", version="0.1"}
interface = {path="./interface", version="0.1"}
infrastructure = {path="./infrastructure", version="0.1"}
ansi_term ="0.12.0"
clap = "3"