[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path ="../domain", version="0.1.0"}
usecases = {path="../usecases", version="0.1.0"}
interface = {path="../interface", version="0.1.0"}

clap = {version = "3", features = ["yaml"]}